Resume may not reflect recent activities

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </div>
                     <h1 class="sub-title" data-aos="zoom-in-down" data-aos-duration="1000">Portfolio</h1>
                     <div id="portfolio-span" data-aos="zoom-out-right" data-aos-duration="1500">
-                        <span >To learn more about my activities, click below and download my resume. <br><br></span>
+                        <span >To learn more about my activities, click below and download my resume. Resume may not reflect recent activities.<br><br></span>
                     </div>
                 <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
                 <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume-protected.pdf" frameborder="0" style="width: 110%; height: 400px;"></iframe>
