--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                     </div>
                                     <div class="carousel-item text-center text-white py-5">
                                         <i class="fa-solid fa-trophy"></i>
-                                        <h2>5th Varsity Parli Debate State Competition</h2>
+                                        <h2>5th Varsity Debate State Competition '23</h2>
                                     </div>
                                     <div class="carousel-item text-center text-white py-5">
                                         <i class="fa-solid fa-graduation-cap"></i>
@@ -278,8 +278,16 @@
                                         <h2>Principal Honor Roll</h2>
                                     </div>
                                     <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-robot"></i>
+                                        <h2>Montgomery Champions - Robotics '24</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
                                         <i class="fa-solid fa-book"></i>
                                         <h2>AP Scholar</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-trophy"></i>
+                                        <h4>Semi-Finalist Varsity Debate State Competition '24</h4>
                                     </div>
                                     <div class="carousel-item text-center text-white py-5">
                                         <i class="fa-solid fa-medal"></i>
