--- a/index.html
+++ b/index.html
@@ -170,20 +170,19 @@
                     <img src="images/arnavsuit.jpg">
                 </div>
                 <div class="about-col-2" >
-                    <h1 data-aos="zoom-in-up" class="sub-title"> Greetings! <span class="wave">👋🏽</span></h1>
+                    <h1 data-aos="zoom-in-up" class="sub-title"> Hi There! <span class="wave">👋🏽</span></h1>
                     <!-- <h1 data-aos="zoom-in-up" class="sub-title-context center">It's nice to meet you </h1> -->
 
                     <p data-aos="flip-right" data-aos-duration="900">
-                    Hello and welcome to my dedicated space for those considering writing a letter of recommendation on my behalf.
-                    Before delving into the details about my journey and accomplishments, I deeply appreciate the time and effort you're investing in supporting my aspirations. 
+                    My Name is Arnav Gupta and I am a Junior at  <span style="color: rgb(230, 69, 69);">Hunterdon Central Regional High School</span> who is <span style="color: rgb(141, 230, 69);">passionate</span> about <span style="color: rgb(69, 171, 230);">programming and technology.</span> 
+                    I believe that these fields have the power to transform the world, and I'm excited to be a part of that change.
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
-                    As I look towards the future, I'm eager to work in the Software Industry and eventually start a business. 
-                    A letter of recommendation from esteemed educators and professionals like you would be invaluable in advancing towards these goals.
-                    This page is a testament to my journey so far, and I hope it serves as a comprehensive overview of my qualifications and character.
+                    In school, I strive to excel in subjects like <span style="color: rgb(69, 171, 230);">mathematics, science, and computer science</span>, as they provide a strong foundation for my programming journey. 
+                    One of my favorite aspects of programming is the ability to <span style="color: rgb(230, 123, 69);">collaborate</span> with like-minded individuals.
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
-                    Thank you for considering my request for a letter of recommendation. Your support plays a crucial role in my journey, and I am deeply appreciative of your time and consideration.
+                    In my free time, I love to engage with my friends and family. I also play basketball and golf daily, and I always try to improve my game. Lastly, I love to self improve by working out.
                     </p>
                 </div>
             </div>
