update to fix btn contact -- still needs work

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                         <label for="floatingTextarea2">Comments</label>
                     </div>
                     <div data-aos="zoom-in-left" data-aos-anchor-placement="top-bottom">
-                        <button id="submitBtn" type="submit" class="btn btn-primary" onclick="showSpinner()" disabled>Submit</button>
+                        <button id="submitBtn" type="submit" class="btn btn-primary" onclick="showSpinner()">Submit</button>
                     </div>
                 </form>
                 <span id="msg"></span>
