added "talk to arnav"

--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
                 <h1 class="sub-title" data-aos="zoom-in-right" > Contact Me</h1>
                 <p id="contact-email" style="color: gray" data-aos="zoom-in-right" data-aos-duration="900">arnavkg@gmail.com</p>
                 <p id="contact-location" style="color: gray" data-aos="zoom-in-right" data-aos-duration="900">Flemington, New Jersey</p>
+                <p data-aos="zoom-in-right" data-aos-duration="900"><a href="https://ai.arnavgupta.info/" style="color: gray !important" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Talk to Arnav</a></p>
                 <div class="social-icons" data-aos="zoom-in-right" data-aos-duration="900">
                     <a href="mailto:arnavkgu@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                     <a href="https://twitter.com/ArnavGu44946931" target="_blank"><i class="fab fa-twitter-square"></i></a>
