--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
         Any Questions? Email Arnav Gupta.
         <div class="mt-2 pt-2 border-top">
             <a class="btn btn-primary btn-sm" href="mailto:arnavkgu@gmail.com" role="button">Click Here to Email</a>
+            <a class="btn btn-primary btn-sm" href="https://ai.arnavgupta.info/" role="button">Chat with Arnav</a>
         </div>
     </div>
 </div>
