updated positions & awards

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                         <div class="tab-contents active-tab" id="activities" >
                             <ul>
                                 <li><span><span class="tab-contents-role">Founder and President</span> (Oct 2022 - Present)</span><br>Developer Code Club</li>
-                                <li><span><span class="tab-contents-role">Vice President</span> (Sep 2022 - Present)</span><br>Investment Club </li>
-                                <li><span><span class="tab-contents-role">Programming Captain </span>(Sep 2021 - Present)</span><br>Robotics Club Team 3637 </li>
-                                <li><span><span class="tab-contents-role">Recording Secretary</span> (Sep 2021 - Present)</span><br>National Speech & Debate Association</li>
+                                <li><span><span class="tab-contents-role">VP Project Manager </span>(Sep 2021 - Present)</span><br>Robotics Club Team 3637 </li>
+                                <li><span><span class="tab-contents-role">Vice President</span> (Sep 2021 - Present)</span><br>National Speech & Debate Association</li>
+                                <li><span><span class="tab-contents-role">Vice President</span> (Sep 2022 - May 2024)</span><br>Investment Club </li>
                                 <li><span><span class="tab-contents-role">Active Member & Mentor</span> (Sep 2022 - Present)</span><br>Connect Club</li>
                             </ul>
                         </div>
@@ -296,6 +296,14 @@
                                     <div class="carousel-item text-center text-white py-5">
                                         <i class="fa-solid fa-users"></i>
                                         <h2>Staff/Student All Star Committee</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-star"></i>
+                                        <h2>Varsity Status Robotics</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-trophy"></i>
+                                        <h2>NAACH UTSAV Bhangra Dance Champions</h2>
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -377,6 +385,7 @@
         $('#submitBtn').prop('disabled', !allFieldsFilled);
     });
 });
+
 </script>
 
 <div class="copyright">
