added rising senior

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-        strings: ['A High School Student ', 'A Programmer', 'An Instructor', 'A Student', 'A Mentor', 'A Junior', 'A Leader', 'A Computer Science Teacher', 'A Tutor', 'A Software Developer', 'A Learner', 'An Innovator', 'A Intern', 'A Captain', 'A Founder'],
+        strings: ['A High School Student ', 'A Programmer', 'An Instructor', 'A Student', 'A Mentor', 'A Senior', 'A Leader', 'A Computer Science Teacher', 'A Tutor', 'A Software Developer', 'A Learner', 'An Innovator', 'A Intern', 'A Captain', 'A Founder'],
         typeSpeed: 70, 
         backSpeed: 60,
         backDelay: 1200,
@@ -174,7 +174,7 @@
                     <!-- <h1 data-aos="zoom-in-up" class="sub-title-context center">It's nice to meet you </h1> -->
 
                     <p data-aos="flip-right" data-aos-duration="900">
-                    My Name is Arnav Gupta and I am a Junior at  <span style="color: rgb(230, 69, 69);">Hunterdon Central Regional High School</span> who is <span style="color: rgb(141, 230, 69);">passionate</span> about <span style="color: rgb(69, 171, 230);">programming and technology.</span> 
+                    My Name is Arnav Gupta and I am a rising Senior at  <span style="color: rgb(230, 69, 69);">Hunterdon Central Regional High School</span> who is <span style="color: rgb(141, 230, 69);">passionate</span> about <span style="color: rgb(69, 171, 230);">programming and technology.</span> 
                     I believe that these fields have the power to transform the world, and I'm excited to be a part of that change.
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
