--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <span >To learn more about my activities, click below and download my resume. Resume may not reflect recent activities.<br><br></span>
                     </div>
                 <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
-                <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume.pdf" frameborder="0" style="width: 105%; height: 400px;"></iframe>
+                <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume V2.pdf" frameborder="0" style="width: 105%; height: 400px;"></iframe>
             </div>
             </div>
             <div class="col-sm-7">
@@ -221,7 +221,7 @@
                                 <li><span><span class="tab-contents-role">Founder and President</span> (Oct 2022 - Present)</span><br>Developer Code Club</li>
                                 <li><span><span class="tab-contents-role">VP Project Manager </span>(Sep 2021 - Present)</span><br>Robotics Club Team 3637 </li>
                                 <li><span><span class="tab-contents-role">Vice President</span> (Sep 2021 - Present)</span><br>National Speech & Debate Association</li>
-                                <li><span><span class="tab-contents-role">Vice President</span> (Sep 2022 - May 2024)</span><br>Investment Club </li>
+                                <li><span><span class="tab-contents-role">Founder Member & Vice President</span> (Sep 2022 - May 2024)</span><br>Investment Club </li>
                                 <li><span><span class="tab-contents-role">Active Member & Mentor</span> (Sep 2022 - Present)</span><br>Connect Club</li>
                             </ul>
                         </div>
