--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="keywords" content="Arnav Gupta, Hunterdon, CS, Computer Science, Flemington, NJ, Hunterdon County, Technology, New Jersey, United States, US, Website">
+    <!-- <meta name="keywords" content="Arnav Gupta, Hunterdon, CS, Computer Science, Flemington, NJ, Hunterdon County, Technology, New Jersey, United States, US, Website"> -->
+    <meta name="robots" content="noindex">
     <meta name="description" content="Personal Biography about Arnav Gupta">
     <meta name="author" content="Arnav Gupta">
 
