coded by highschool student add

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 </script>
 
 <div class="copyright">
-    <p>Copyright © Arnav Gupta. Made by a High School Student</p>
+    <p>Copyright © Arnav Gupta. Coded by a High School Student</p>
 </div>
 
 <script>
