--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 </script>
 
 <div class="copyright">
-    <p>Copyright © Arnav Gupta. Made by a High School Student</p>
+    <p>Copyright © Arnav Gupta. Coded by a High School Student</p>
 </div>
 
 <script>
